--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -63,7 +63,7 @@
       labels: ["48th", "49th", "May Goal"],
       datasets: [{
         label: '# of Volunteers',
-        data: [3, 3, 15],
+        data: [<%= @volunteers_by_ward['48'] %>, <%= @volunteers_by_ward['49'] %>, 15],
         backgroundColor: [
           'rgba(54, 162, 235, 0.2)',
           'rgba(75, 192, 192, 0.2)',
