--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -44,7 +44,7 @@
   </tbody>
 </table>
 
-<h2>Postcards</h2>
+<h2>Postcards Collected</h2>
 <div class="postcard-chart-container">
   <canvas id="postcard-chart"></canvas>
 </div>
