--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,17 @@
   </head>
 
   <body data-controller="<%= controller.controller_name %>" data-action="<%= controller.action_name %>">
-    <div class="notice"><%= notice %></div>
-    <div class="alert"><%= alert %></div>
-    <div class="error"><%= flash[:error] %></div>
+    <header>
+      CPAC Tools
+      <% if user_signed_in? %>
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign In", new_user_session_path %>
+      <% end %>
+    </header>
+
+    <%= render "layouts/messages" %>
+
     <%= yield %>
   </body>
 </html>
