--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,6 @@ header {
   a, a:visited, a:active, a:hover {
     color: white;
     text-decoration: none;
-    float: right;
     background: none;
 
     font-size: 12px;
@@ -82,6 +81,50 @@ header {
       text-decoration: underline;
     }
   }
+
+  a.logo, a.logo:visited, a.logo:active, a.logo:hover {
+    font-size: 40px;
+    color: black;
+    text-decoration: none;
+  }
+  .logo img {
+    height: 80px;
+    vertical-align: middle;
+  }
+
+  ul {
+    float: right;
+  }
+
+  li {
+    display: inline-block;
+    margin-left: 1em;
+  }
+}
+
+footer {
+  font-size: 10px;
+  text-align: center;
+  padding: 2em;
+  border-top: solid 1px #999;
+  margin-top: 10em;
+}
+
+body {
+  background: #f4f4f4;
+}
+
+.main {
+  max-width: 900px;
+  min-width: 600px;
+  width: 80%;
+  margin: 0 auto;
+  background: #fff;
+}
+
+.content {
+  padding: 20px;
+  margin: 0;
 }
 
 .message {
@@ -108,7 +151,6 @@ header {
     border-color: red;
   }
 }
-
 
 
 
