--- a/app/views/table_locations/index.html.erb
+++ b/app/views/table_locations/index.html.erb
@@ -5,11 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Ward</th>
-      <th>Status</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>Starts at</th>
-      <th>Ends at</th>
+      <th>Time</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,11 +15,7 @@
       <tr>
         <td><%= link_to table_location.name, table_location %></td>
         <td><%= table_location.ward %></td>
-        <td><%= table_location.status %></td>
-        <td><%= table_location.latitude %></td>
-        <td><%= table_location.longitude %></td>
-        <td><%= table_location.starts_at %></td>
-        <td><%= table_location.ends_at %></td>
+        <td><%= table_location.starts_at.strftime("%As %-I:%M%P") %> - <%= table_location.ends_at.to_s(:short_time) %></td>
         <td><% link_to 'Destroy', table_location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
