charts show all data

--- a/app/assets/stylesheets/pages/welcome.scss
+++ b/app/assets/stylesheets/pages/welcome.scss
@@ -7,7 +7,7 @@
       margin-top: 3em;
     }
 
-    .volunteer-chart-container, .postcard-chart-container, .new-volunteer-chart-container {
+    .staff-chart-container, .postcard-chart-container, .new-volunteer-chart-container {
       height: 200px;
       width: 400px;
       margin: 0 auto;
