--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Northside CPAC May Goals</h1>
 
 
-<h2>Unique Volunteers Per Ward</h2>
+<h2>Table Staff Per Ward</h2>
 
-<div class="volunteer-chart-container">
-  <canvas id="volunteer-chart"></canvas>
+<div class="staff-chart-container">
+  <canvas id="staff-chart"></canvas>
 </div>
 
 
@@ -28,7 +28,7 @@
     </tr>
     <tr>
       <td class=""></td>
-      <td class="warning">&nbsp;</td>
+      <td class="warning">Mark Maxwell</td>
       <td class="warning"></td>
     </tr>
     <tr>
@@ -56,46 +56,6 @@
 
 <script type="text/javascript">
 
-  var ctx = document.getElementById("volunteer-chart");
-  var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: ["48th", "49th", "May Goal"],
-      datasets: [{
-        label: '# of Volunteers',
-        data: [<%= @volunteers_by_ward['48'] %>, <%= @volunteers_by_ward['49'] %>, 15],
-        backgroundColor: [
-          'rgba(54, 162, 235, 0.2)',
-          'rgba(75, 192, 192, 0.2)',
-          'rgba(255, 206, 86, 0.2)',
-          'rgba(153, 102, 255, 0.2)',
-          'rgba(255, 159, 64, 0.2)',
-          'rgba(255, 99, 132, 0.2)',
-        ],
-        borderColor: [
-          'rgba(54, 162, 235, 1)',
-          'rgba(75, 192, 192, 1)',
-          'rgba(255, 206, 86, 1)',
-          'rgba(153, 102, 255, 1)',
-          'rgba(255, 159, 64, 1)',
-          'rgba(255,99,132,1)',
-        ],
-        borderWidth: 1
-      }]
-    },
-    options: {
-      legend: {
-        display: false
-      },
-      scales: {
-        yAxes: [{
-          ticks: {
-            beginAtZero:true
-          }
-        }]
-      }
-    }
-  });
 
 
   var colors = {
@@ -109,27 +69,33 @@
     }
   };
 
-  var ctx = document.getElementById("postcard-chart");
+<% [
+  ['staff-chart', @table_staff_by_ward],
+  ['postcard-chart', @postcards_by_ward],
+  ['new-volunteer-chart', @new_volunteers_by_ward],
+].each do |chart_id, data_by_ward| %>
+  var ctx = document.getElementById("<%= chart_id %>");
   var myChart = new Chart(ctx, {
     type: 'line',
     data: {
-      labels: ["April", "May"],
+      labels: <%= @labels.to_json.html_safe %>,
       datasets: [
-        <% @postcards_by_ward.each do |ward, data| %>
+        <% data_by_ward.each do |ward, data| %>
           {
             label: '<%= ward %>th',
             data: <%= data %>,
             backgroundColor: colors['backgroundColor'][<%= ward %>],
-            borderColor: colors['borderColor'][<%= ward %>]
+            borderColor: colors['borderColor'][<%= ward %>],
+            lineTension: 0
           },
         <% end %>
       ],
-      borderWidth: 1
+      borderWidth: 1,
     },
     options: {
       scales: {
         yAxes: [{
-          stacked: true,
+          stacked: false,
           ticks: {
             beginAtZero:true
           }
@@ -137,35 +103,7 @@
       }
     }
   });
-
-  var ctx = document.getElementById("new-volunteer-chart");
-  var myChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels: ["April", "May"],
-      datasets: [
-        <% @new_volunteers_by_ward.each do |ward, data| %>
-          {
-            label: '<%= ward %>th',
-            data: <%= data %>,
-            backgroundColor: colors['backgroundColor'][<%= ward %>],
-            borderColor: colors['borderColor'][<%= ward %>]
-          },
-        <% end %>
-      ],
-      borderWidth: 1
-    },
-    options: {
-      scales: {
-        yAxes: [{
-          stacked: true,
-          ticks: {
-            beginAtZero:true
-          }
-        }]
-      }
-    }
-  });
+<% end %>
 </script>
 
 
