--- a/app/views/table_locations/show.html.erb
+++ b/app/views/table_locations/show.html.erb
@@ -64,6 +64,9 @@
 <% end %>
 </table>
 
+<br>
+<%= link_to "+Add Table Event", new_table_event_path(table_location_id: @table_location), class: "btn" %>
+
 <h2>Recent Table Events</h2>
 
 <table>
