update homepage header

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,48 +1,10 @@
-<h1>Northside CPAC May Goals</h1>
+<h1>Northside Table Performance</h1>
 
 
 <h2>Table Staff Per Ward</h2>
-
 <div class="staff-chart-container">
   <canvas id="staff-chart"></canvas>
 </div>
-
-
-<h2>Point People</h2>
-
-<table>
-  <thead>
-    <tr>
-      <th>Ward</th>
-      <th>Table Owners</th>
-      <th>Business Liaisons</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="">48th</td>
-      <td class="success">
-        Katie Gilbert
-      </td>
-      <td class="warning"></td>
-    </tr>
-    <tr>
-      <td class=""></td>
-      <td class="warning">Mark Maxwell</td>
-      <td class="warning"></td>
-    </tr>
-    <tr>
-      <td class="">49th</td>
-      <td class="success">Hollian Wint</td>
-      <td class="warning"></td>
-    </tr>
-    <tr>
-      <td class=""></td>
-      <td class="warning">&nbsp;</td>
-      <td class="warning"></td>
-    </tr>
-  </tbody>
-</table>
 
 <h2>Postcards Collected</h2>
 <div class="postcard-chart-container">
