ability to add instructions to the table (eg where to pick up)

--- a/app/views/table_locations/_form.html.erb
+++ b/app/views/table_locations/_form.html.erb
@@ -46,6 +46,11 @@
     <%= f.datetime_select :ends_at %>
   </div>
 
+  <div class="field">
+    <%= f.label :instructions %>
+    <%= f.text_area :instructions %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
