--- a/app/views/table_locations/show.html.erb
+++ b/app/views/table_locations/show.html.erb
@@ -25,6 +25,13 @@
   <%= @table_location.volunteers_collected %>
 </p>
 
+<br>
+
+<p>
+  <strong>Instructions: </strong>
+  <%= @table_location.instructions %>
+</p>
+
 
 <h2>Upcoming Table Events</h2>
 
